Bug on displaying dark mode.

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,11 +1,3 @@
-@use '/components/utilities/color-themes';
-
-.main {
-  @include themed() {
-    background-color: t('bg');
-  }
-}
-
 
 .header h2 {
   font-weight: 700;
