--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -1,25 +1,21 @@
-@import '/components/utilities/color-themes';
+@import '/components/utilities/colorThemes';
 
 .header {
+  @include themify() {
+    color: themed('text');
+  }
+
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
   padding: .5rem 1rem;
-  /*color: black;*/
-  @include themed() {
-    color: t('text');
-  }
 }
 
 .header > h1 {
   font-size: 1.75rem;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-weight: 700;
-  /*color: #E43D12; */
-  @include themed() {
-    color: t('h1-color');
-  }
 }
 
 .header h2 {
